--- a/_includes/head.html
+++ b/_includes/head.html
@@ -34,3 +34,11 @@
     <script src="{{ script | relative_url }}"></script>
   {% endfor %}
 {% endif %}
+
+<script type="text/x-mathjax-config">
+MathJax.Hub.Config({
+     tex2jax: {
+       skipTags: ['script', 'noscript', 'style', 'textarea', 'pre'],
+       inlineMath: [['$','$']]
+     }
+});
