--- a/styles.css
+++ b/styles.css
@@ -34,6 +34,10 @@ section img {
 	margin: auto;
 }
 
+h1, h2, h3, blockquote {
+  font-style: italic;
+}
+
 article {
 	border-radius: 10px;
 	background-color: blanchedalmond;
@@ -42,10 +46,6 @@ article {
 
 article > h3 {
 	margin-bottom: 0;
-}
-
-blockquote {
-  font-style: italic;
 }
 
 blockquote > p {
