--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,7 @@
   It is used by all pages in my portfolio to give the site a consistent look and feel.
 */
 
+/* 전체 페이지 폰트 지정 */
 * {
 	font-family: 'Roboto', sans-serif;
 }
@@ -21,46 +22,54 @@ body {
 	margin-left: auto;
 	margin-right: auto;
 	width: 80%;
-	padding-left: 10px;
 }
 
+/* 리스트 스타일 none */
 li {
 	list-style: none;
 }
 
+/* section 내의 이미지 크기 고정 및 가운데 정렬 */
 section img {
 	width: 60%;
 	display: block;
 	margin: auto;
 }
 
+/* italic체 지정 */
 h1, h2, h3, blockquote {
   font-style: italic;
 }
 
+/* article들은 배경색 지정 */
 article {
 	border-radius: 10px;
 	background-color: blanchedalmond;
 	padding: 0 10px 1px 10px;
 }
 
+/* article 내의 h3태그들은 바닥 마진 없애기 */
 article > h3 {
 	margin-bottom: 0;
 }
 
+/* 인용구 위치 정렬 */
 blockquote > p {
 	text-align: center;
 }
 
+/* 인용구 footer 위치 지정 */
 blockquote > footer {
 	text-align: right;
 	font-size: 12px;
 }
 
+/* footer 내의 요소 정렬 */
 footer {
 	text-align: center;
 }
 
+/* footer 내의 이미지 크기 설정 */
 footer img {
 	width: 80%;
 }
