--- a/styles.css
+++ b/styles.css
@@ -24,6 +24,26 @@ body {
 	width: 80%;
 }
 
+#todo {
+	display: flex;
+	align-items: center;
+	border-style: solid;
+	margin: 10px;
+	padding: 10px;
+}
+
+#addBtn {
+	margin-left: auto;
+}
+
+.didList {
+	text-decoration: line-through;
+}
+
+#list button {
+	background-color: transparent;
+}
+
 /* 리스트 스타일 none */
 li {
 	list-style: none;
@@ -37,8 +57,11 @@ section img {
 }
 
 /* italic체 지정 */
-h1, h2, h3, blockquote {
-  font-style: italic;
+h1,
+h2,
+h3,
+blockquote {
+	font-style: italic;
 }
 
 /* article들은 배경색 지정 */
